--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/xerces/jars/xercesImpl-2.6.2.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-lang/jars/commons-lang-2.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jsf"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
