--- a/.classpath
+++ b/.classpath
@@ -11,17 +11,13 @@
 	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0-20040521.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4-20040521.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-fileupload/jars/commons-fileupload-1.0.jar"/>
-	<classpathentry kind="src" path="/legacy"/>
-	<classpathentry kind="src" path="/kernel"/>
 	<classpathentry kind="var" path="MAVEN_REPO/hibernate/jars/hibernate-2.1.8.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/springframework/jars/spring-1.1.5.jar"/>
-	<classpathentry kind="src" path="/legacy-service"/>
 	<classpathentry kind="src" path="/util"/>
 	<classpathentry kind="var" path="MAVEN_REPO/xerces/jars/xercesImpl-2.6.2.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-lang/jars/commons-lang-2.0.jar"/>
 	<classpathentry kind="src" path="/jsf"/>
-	<classpathentry kind="src" path="/common"/>
 	<classpathentry kind="var" path="MAVEN_REPO/junit/jars/junit-3.8.1.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jta/jars/jta-h2.1.8.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/dom4j/jars/dom4j-1.6.jar"/>
@@ -32,5 +28,18 @@
 	<classpathentry kind="var" path="MAVEN_REPO/aopalliance/jars/aopalliance-1.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/log4j/jars/log4j-1.2.9.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="src" path="/util-api"/>
+	<classpathentry kind="src" path="/tool-api"/>
+	<classpathentry kind="src" path="/content-api"/>
+	<classpathentry kind="src" path="/event-api"/>
+	<classpathentry kind="src" path="/authz-api"/>
+	<classpathentry kind="src" path="/user-api"/>
+	<classpathentry kind="src" path="/site-api"/>
+	<classpathentry kind="src" path="/db-api"/>
+	<classpathentry kind="src" path="/component-api"/>
+	<classpathentry kind="src" path="/email-api"/>
+	<classpathentry kind="src" path="/gradebook"/>
+	<classpathentry kind="src" path="/entity-api"/>
+	<classpathentry kind="src" path="/util-util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
