--- a/.classpath
+++ b/.classpath
@@ -41,5 +41,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/org.springframework/jars/spring-1.2.8.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/privacy"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
