--- a/.classpath
+++ b/.classpath
@@ -40,5 +40,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/privacy-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/profile"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
