--- a/.classpath
+++ b/.classpath
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-	<classpathentry kind="src" path="messageforums-api/src/java"/>
-	<classpathentry kind="src" path="messageforums-component-impl/src/java"/>
-	<classpathentry kind="src" path="messageforums-hbm/src/java"/>
-	<classpathentry kind="src" path="messageforums-app/src/webapp/WEB-INF"/>
-	<classpathentry kind="src" path="messageforums-app/src/java"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-impl-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-api-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-fileupload/jars/commons-fileupload-1.1.1.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-lang/jars/commons-lang-2.0.jar"/>
-	<classpathentry kind="src" path="/jsf"/>
-	<classpathentry kind="var" path="MAVEN_REPO/junit/jars/junit-3.8.1.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jta/jars/jta-h2.1.8.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/dom4j/jars/dom4j-1.6.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-collections/jars/commons-collections-3.1.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/odmg/jars/odmg-3.0.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/net.sf.ehcache/jars/ehcache-1.2.4.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/cglib/jars/cglib-full-2.0.2.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/aopalliance/jars/aopalliance-1.0.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/log4j/jars/log4j-1.2.9.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="src" path="/util-api"/>
-	<classpathentry kind="src" path="/tool-api"/>
-	<classpathentry kind="src" path="/content-api"/>
-	<classpathentry kind="src" path="/event-api"/>
-	<classpathentry kind="src" path="/authz-api"/>
-	<classpathentry kind="src" path="/user-api"/>
-	<classpathentry kind="src" path="/site-api"/>
-	<classpathentry kind="src" path="/db-api"/>
-	<classpathentry kind="src" path="/component-api"/>
-	<classpathentry kind="src" path="/email-api"/>
-	<classpathentry kind="src" path="/gradebook"/>
-	<classpathentry kind="src" path="/entity-api"/>
-	<classpathentry kind="src" path="/util-util"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.springframework/jars/spring-1.2.8.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/privacy-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/profile"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-codec/jars/commons-codec-1.3.jar"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
+  <classpathentry kind="src" path="messageforums-api/src/java"/>
+  <classpathentry kind="src" path="messageforums-component-impl/src/java"/>
+  <classpathentry kind="src" path="messageforums-hbm/src/java"/>
+  <classpathentry kind="src" path="messageforums-app/src/webapp/WEB-INF"/>
+  <classpathentry kind="src" path="messageforums-app/src/java"/>
+  <classpathentry kind="var" path="M2_REPO/jsf/jsf-impl/1.1.01/jsf-impl-1.1.01.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jsf/jsf-api/1.1.01/jsf-api-1.1.01.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.1.1/commons-fileupload-1.1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.0/commons-lang-2.0.jar"/>
+  <classpathentry kind="src" path="/jsf"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jta/jta/h2.1.8/jta-h2.1.8.jar"/>
+  <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6/dom4j-1.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.1/commons-collections-3.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/odmg/odmg/3.0/odmg-3.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/sf/ehcache/ehcache/1.2.4/ehcache-1.2.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/cglib/cglib-full/2.0.2/cglib-full-2.0.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.9/log4j-1.2.9.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
+  <classpathentry kind="src" path="/util-api"/>
+  <classpathentry kind="src" path="/tool-api"/>
+  <classpathentry kind="src" path="/content-api"/>
+  <classpathentry kind="src" path="/event-api"/>
+  <classpathentry kind="src" path="/authz-api"/>
+  <classpathentry kind="src" path="/user-api"/>
+  <classpathentry kind="src" path="/site-api"/>
+  <classpathentry kind="src" path="/db-api"/>
+  <classpathentry kind="src" path="/component-api"/>
+  <classpathentry kind="src" path="/email-api"/>
+  <classpathentry kind="src" path="/gradebook"/>
+  <classpathentry kind="src" path="/entity-api"/>
+  <classpathentry kind="src" path="/util-util"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/1.2.8/spring-1.2.8.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/privacy-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/profile"/>
+  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
+  <classpathentry kind="output" path="bin"/>
 </classpath>
