--- a/messageforums-app/src/webapp/WEB-INF/web.xml
+++ b/messageforums-app/src/webapp/WEB-INF/web.xml
@@ -128,7 +128,7 @@
  	    <servlet-class>org.sakaiproject.tool.messageforums.MessageForumsFilePickerServlet</servlet-class>
         <init-param>
             <param-name>default</param-name>
-            	<param-value>privateMsg/pvtMsgHpView</param-value>
+            	<param-value>/privateMsg/pvtMsgHpView</param-value>
         </init-param>
         <init-param>
             <param-name>path</param-name>
@@ -141,13 +141,13 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     
-	<!-- Dispatcher for Forums tool -->    
+	<!-- Dispatcher for Messages tool -->    
     <servlet>
         <servlet-name>sakai.forums</servlet-name>
  	    <servlet-class>org.sakaiproject.tool.messageforums.MessageForumsFilePickerServlet</servlet-class>
         <init-param>
             <param-name>default</param-name>
-            	<param-value>discussionForum/forumsOnly/dfForums</param-value>
+            	<param-value>/discussionForum/forumsOnly/dfForums</param-value>
         </init-param>
         <init-param>
             <param-name>path</param-name>
@@ -174,7 +174,7 @@
         </init-param>
         <init-param>
             <param-name>default.last.view</param-name>
-            <param-value>false</param-value>
+            <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -182,7 +182,7 @@
 	<!-- Dispatcher for helper tool -->    
     <servlet>
         <servlet-name>sakai.messageforums.helper</servlet-name>
-        <servlet-class>org.sakaiproject.tool.messageforums.MessageForumsFilePickerServlet</servlet-class>
+        <servlet-class>org.sakaiproject.jsf.util.JsfTool</servlet-class>
         <init-param>
             <param-name>default</param-name>
             <param-value>pvtMsg</param-value>
