--- a/.classpath
+++ b/.classpath
@@ -35,7 +35,7 @@
 	<classpathentry kind="src" path="/gradebook"/>
 	<classpathentry kind="src" path="/entity-api"/>
 	<classpathentry kind="src" path="/util-util"/>
-	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.2.5.ga/hibernate-3.2.5.ga.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/privacy-api"/>
