--- a/.classpath
+++ b/.classpath
@@ -41,5 +41,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/privacy-api"/>
 	<classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar" sourcepath="/SPRING_HOME"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/profile"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
