--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -38,8 +38,12 @@
       <artifactId>commons-fileupload</artifactId>
       <version>${sakai.commons.fileupload.version}</version>
     </dependency>
-
-
+	<dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.1.2</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-messageforums-api</artifactId>
