SAK-13442 - Forum Authz not hiding topics restricted to role other than student
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-7924@46783 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-hbm/pom.xml
+++ b/messageforums-hbm/pom.xml
@@ -51,6 +51,11 @@
       <version>${sakai.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-tool-api</artifactId>
+      <version>${sakai.version}</version>
+    </dependency>
+    <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.7.0</version>
