--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -146,6 +146,13 @@
       <artifactId>commons-codec</artifactId>
       <version>1.3</version>
     </dependency>
+    <!-- for adding event to feed -->
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.0</version>
+      <type>jar</type>
+    </dependency>
 <!-- these are here because they are packed in the M1 build... but are they really required, it compiles without them -->
     <dependency>
       <groupId>org.sakaiproject</groupId>
