SAK-13638 http://bugs.sakaiproject.org/jira/browse/SAK-13638 Add Support for Event Writing to the Feed tool Forums tool integration
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13638@47059 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry sourcepath="/SPRING_HOME" kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/profile"/>
 	<classpathentry kind="src" path="/entity-broker"/>
+	<classpathentry kind="var" path="M2_REPO/commons-httpclient/commons-httpclient/3.0/commons-httpclient-3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
