--- a/components/pom.xml
+++ b/components/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>msgcntr-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>SNAPSHOT</version>
+    <version>2.6.0RC1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai MessageForums Components</name>
@@ -25,10 +25,10 @@
       <artifactId>sakai-messageforums-component-impl</artifactId>
       <version>${sakai.version}</version>
       <exclusions>
-	<exclusion>
-      		<groupId>org.sakaiproject</groupId>
-      		<artifactId>sakai-messageforums-hbm</artifactId>
-	</exclusion>
+        <exclusion>
+          <groupId>org.sakaiproject</groupId>
+          <artifactId>sakai-messageforums-hbm</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
   </dependencies>
