--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,18 @@
   <parent>
     <artifactId>base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>SNAPSHOT</version>
+    <version>2.6.0RC1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Message Center Project</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>msgcntr-base</artifactId>
   <packaging>pom</packaging>
-  
   <scm>
     <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
     <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</developerConnection>
     <url>https://source.sakaiproject.org/svn/msgcntr/trunk</url>
   </scm>
-  
-
   <modules>
     <module>components</module>
     <module>messageforums-api</module>
