--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
+	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
 	<classpathentry kind="src" path="messageforums-api/src/java"/>
 	<classpathentry kind="src" path="messageforums-component-impl/src/java"/>
 	<classpathentry kind="src" path="messageforums-hbm/src/java"/>
@@ -22,26 +22,16 @@
 	<classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.9/log4j-1.2.9.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="src" path="/util-api"/>
-	<classpathentry kind="src" path="/tool-api"/>
-	<classpathentry kind="src" path="/content-api"/>
-	<classpathentry kind="src" path="/event-api"/>
-	<classpathentry kind="src" path="/authz-api"/>
-	<classpathentry kind="src" path="/user-api"/>
-	<classpathentry kind="src" path="/site-api"/>
-	<classpathentry kind="src" path="/db-api"/>
-	<classpathentry kind="src" path="/component-api"/>
-	<classpathentry kind="src" path="/email-api"/>
-	<classpathentry kind="src" path="/gradebook"/>
-	<classpathentry kind="src" path="/entity-api"/>
-	<classpathentry kind="src" path="/util-util"/>
 	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.2.5.ga/hibernate-3.2.5.ga.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/privacy-api"/>
 	<classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
-	<classpathentry sourcepath="/SPRING_HOME" kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar" sourcepath="/SPRING_HOME"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/profile"/>
 	<classpathentry kind="src" path="/entity-broker"/>
+	<classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.0RC2-SNAPSHOT/sakai-kernel-api-1.0RC2-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0RC2-SNAPSHOT/sakai-component-manager-1.0RC2-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0RC2-SNAPSHOT/sakai-kernel-util-1.0RC2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
