--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -85,6 +85,20 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.0.2</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
