--- a/messageforums-component-impl/.classpath
+++ b/messageforums-component-impl/.classpath
@@ -21,10 +21,10 @@
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
   <classpathentry kind="src" path="/sakai-common-manager-api"/>
   <classpathentry kind="src" path="/sakai-common-type-api"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0RC2-SNAPSHOT/sakai-component-manager-1.0RC2-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0/sakai-component-manager-1.0.jar"/>
   <classpathentry kind="src" path="/sakai-gradebook-service-api"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.0RC2-SNAPSHOT/sakai-kernel-api-1.0RC2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0RC2-SNAPSHOT/sakai-kernel-util-1.0RC2-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.0/sakai-kernel-api-1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0/sakai-kernel-util-1.0.jar"/>
   <classpathentry kind="src" path="/sakai-messageforums-api"/>
   <classpathentry kind="src" path="/sakai-messageforums-hbm"/>
   <classpathentry kind="src" path="/sakai-privacy-api"/>
