--- a/messageforums-app/.project
+++ b/messageforums-app/.project
@@ -2,6 +2,14 @@
   <name>sakai-messageforums-tool</name>
   <comment/>
   <projects>
+    <project>entitybroker-api</project>
+    <project>sakai-depend-jsf-widgets-sun</project>
+    <project>sakai-gradebook-service-api</project>
+    <project>sakai-jsf-app</project>
+    <project>sakai-jsf-sun-ri-tool</project>
+    <project>sakai-jsf-tool</project>
+    <project>sakai-jsf-widgets</project>
+    <project>sakai-jsf-widgets-sun</project>
     <project>sakai-messageforums-api</project>
     <project>sakai-messageforums-hbm</project>
   </projects>
