--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <name>Sakai Message Center Project</name>
   <groupId>org.sakaiproject</groupId>
-  <artifactId>msgcntr-base</artifactId>
+  <artifactId>msgcntr</artifactId>
   <version>1.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <scm>
@@ -28,12 +28,17 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.sakaiproject</groupId>
+        <groupId>org.sakaiproject.msgcntr</groupId>
+        <artifactId>sakai-messageforums-api</artifactId>
+        <version>1.5-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.msgcntr</groupId>
         <artifactId>sakai-messageforums-component-impl</artifactId>
         <version>1.5-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.sakaiproject</groupId>
+        <groupId>org.sakaiproject.msgcntr</groupId>
         <artifactId>sakai-messageforums-hbm</artifactId>
         <version>1.5-SNAPSHOT</version>
         <scope>provided</scope>
@@ -46,18 +51,4 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-<build>
-<plugins>
-	<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.0-beta-9</version>
-				<configuration>
-					<preparationGoals>
-						clean install verify
-					</preparationGoals>
-				</configuration>
-			</plugin>
-</plugins>
-</build>
 </project>
