SAK-16987 merging changes from SAK-11740
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-16987@66653 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/components/.project
+++ b/components/.project
@@ -2,6 +2,7 @@
   <name>sakai-messageforums-components</name>
   <comment/>
   <projects>
+    <project>sakai-messageforums-api</project>
     <project>sakai-messageforums-component-impl</project>
   </projects>
   <buildSpec>
