--- a/components/.classpath
+++ b/components/.classpath
@@ -9,6 +9,7 @@
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta02-SNAPSHOT/sakai-kernel-util-1.1.0-beta02-SNAPSHOT.jar"/>
+  <classpathentry kind="src" path="/sakai-messageforums-api"/>
   <classpathentry kind="src" path="/sakai-messageforums-component-impl"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
