--- a/messageforums-app/.classpath
+++ b/messageforums-app/.classpath
@@ -12,11 +12,7 @@
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/commons-digester/commons-digester/1.6/commons-digester-1.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.2.1/commons-fileupload-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/dhorwitz/.m2/repository/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/entitybroker/entitybroker-api/1.3.7-SNAPSHOT/entitybroker-api-1.3.7-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/jsf/jsf-api/1.1.01/jsf-api-1.1.01.jar"/>
   <classpathentry kind="var" path="M2_REPO/jsf/jsf-impl/1.1.01/jsf-impl-1.1.01.jar"/>
@@ -29,7 +25,7 @@
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-jsf-widgets-sun/2.7.0-SNAPSHOT/sakai-jsf-widgets-sun-2.7.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta02-SNAPSHOT/sakai-kernel-api-1.1.0-beta02-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta02-SNAPSHOT/sakai-kernel-util-1.1.0-beta02-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-messageforums-api/2.7.0-SNAPSHOT/sakai-messageforums-api-2.7.0-SNAPSHOT.jar"/>
+  <classpathentry kind="src" path="/sakai-messageforums-api"/>
   <classpathentry kind="src" path="/sakai-messageforums-hbm"/>
   <classpathentry kind="var" path="M2_REPO/taglibs/standard/1.0.4/standard-1.0.4.jar"/>
   <classpathentry kind="lib" path="/usr/java/jdk1.5.0_19/lib/tools.jar"/>
