--- a/messageforums-component-impl/.classpath
+++ b/messageforums-component-impl/.classpath
@@ -35,7 +35,7 @@
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-gradebook-service-api/2.7.0-SNAPSHOT/sakai-gradebook-service-api-2.7.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.1.0-beta02-SNAPSHOT/sakai-kernel-api-1.1.0-beta02-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.1.0-beta02-SNAPSHOT/sakai-kernel-util-1.1.0-beta02-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-messageforums-api/2.7.0-SNAPSHOT/sakai-messageforums-api-2.7.0-SNAPSHOT.jar"/>
+  <classpathentry kind="src" path="/sakai-messageforums-api"/>
   <classpathentry kind="src" path="/sakai-messageforums-hbm"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-privacy-api/2.7.0-SNAPSHOT/sakai-privacy-api-2.7.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01.jar" sourcepath="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01-sources.jar"/>
