--- a/messageforums-hbm/pom.xml
+++ b/messageforums-hbm/pom.xml
@@ -25,7 +25,7 @@
       <artifactId>sakai-kernel-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.sakaiproject</groupId>
+      <groupId>org.sakaiproject.msgcntr</groupId>
       <artifactId>sakai-messageforums-api</artifactId>
     </dependency>
     <dependency>
