--- a/messageforums-component-impl/.classpath
+++ b/messageforums-component-impl/.classpath
@@ -38,6 +38,7 @@
   <classpathentry kind="src" path="/sakai-messageforums-api"/>
   <classpathentry kind="src" path="/sakai-messageforums-hbm"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-privacy-api/2.7.0-SNAPSHOT/sakai-privacy-api-2.7.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/sakai-search-api/2.7.0-SNAPSHOT/sakai-search-api-2.7.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01.jar" sourcepath="M2_REPO/org/springframework/spring/2.5.6.SEC01/spring-2.5.6.SEC01-sources.jar"/>
   <classpathentry kind="lib" path="/usr/java/jdk1.5.0_19/lib/tools.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
