--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -83,6 +83,10 @@
       <artifactId>commons-codec</artifactId>
       <version>1.3</version>
     </dependency>
+    <dependency>
+    	<groupId>org.sakaiproject</groupId>
+    	<artifactId>sakai-search-api</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <resources>
