--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>2.7.0-SNAPSHOT</version>
    </parent>
   <name>Sakai Message Center Project</name>
-  <groupId>org.sakaiproject</groupId>
+  <groupId>org.sakaiproject.msgcntr</groupId>
   <artifactId>msgcntr</artifactId>
   <version>1.5-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -70,15 +70,15 @@
 		<scope>provided</scope>
 	</dependency>
 	<dependency>
-		<groupId>org.sakaiproject</groupId>
+		<groupId>org.sakaiproject.common</groupId>
 		<artifactId>sakai-common-type-api</artifactId>
-		<version>2.7.0-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 		<scope>provided</scope>
 	</dependency>
 	<dependency>
-		<groupId>org.sakaiproject</groupId>
+		<groupId>org.sakaiproject.common</groupId>
 		<artifactId>sakai-common-manager-api</artifactId>
-		<version>2.7.0-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 		<scope>provided</scope>
 	</dependency>
     </dependencies>
