MSGCNTR-171 refresh metadata files.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@71678 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/.project
+++ b/messageforums-api/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>sakai-messageforums-api</name>
+  <name>messageforums-api</name>
   <comment/>
   <projects/>
   <buildSpec>
