--- a/messageforums-component-impl/.project
+++ b/messageforums-component-impl/.project
@@ -1,9 +1,9 @@
 <projectDescription>
-  <name>sakai-messageforums-component-impl</name>
+  <name>messageforums-component-impl</name>
   <comment/>
   <projects>
-    <project>sakai-messageforums-api</project>
-    <project>sakai-messageforums-hbm</project>
+    <project>messageforums-api</project>
+    <project>messageforums-hbm</project>
   </projects>
   <buildSpec>
     <buildCommand>
