--- a/messageforums-help/.project
+++ b/messageforums-help/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>sakai-messageforums-help</name>
+  <name>messageforums-help</name>
   <comment/>
   <projects/>
   <buildSpec>
