--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -86,9 +86,10 @@
     	<artifactId>search-api</artifactId>
     </dependency>
     <dependency>
-       <groupId>quartz</groupId>
+       <groupId>org.opensymphony.quartz</groupId>
        <artifactId>quartz</artifactId>
-       <version>1.5.2</version>
+       <version>1.6.6</version>
+       <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
