MSGCNTR-230 prevent gradebook-service-api from being bundled up in the webapp war.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@73415 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -56,8 +56,9 @@
       <artifactId>entitybroker-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.sakaiproject.edu-services.gradebook</groupId>
-      <artifactId>gradebook-service-api</artifactId>
+        <groupId>org.sakaiproject.edu-services.gradebook</groupId>
+        <artifactId>gradebook-service-api</artifactId>
+        <version>${sakai.edu-services.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
