--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -60,9 +60,10 @@
 			<artifactId>entitybroker-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.sakaiproject.edu-services.gradebook</groupId>
-			<artifactId>gradebook-service-api</artifactId>
-		</dependency>
+            <groupId>org.sakaiproject.edu-services.gradebook</groupId>
+            <artifactId>gradebook-service-api</artifactId>
+            <version>${sakai.edu-services.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
