MSGCNTR-230 <scope>=provided
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@73468 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -59,6 +59,7 @@
         <groupId>org.sakaiproject.edu-services.gradebook</groupId>
         <artifactId>gradebook-service-api</artifactId>
         <version>${sakai.edu-services.version}</version>
+        <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
