--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -63,6 +63,7 @@
             <groupId>org.sakaiproject.edu-services.gradebook</groupId>
             <artifactId>gradebook-service-api</artifactId>
             <version>${sakai.edu-services.version}</version>
+            <scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
