--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>msgcntr</artifactId>
     <version>2.9-SNAPSHOT</version>
   </parent>
-  <name>Sakai Message Forums Component Implementaiton</name>
+  <name>Sakai Message Forums Component Implementation</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
   <artifactId>messageforums-component-impl</artifactId>
   <organization>
@@ -58,7 +58,7 @@
     <dependency>
         <groupId>org.sakaiproject.edu-services.gradebook</groupId>
         <artifactId>gradebook-service-api</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>${sakai.edu-services.version}</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -86,6 +86,7 @@
     <dependency>
     	<groupId>org.sakaiproject.search</groupId>
     	<artifactId>search-api</artifactId>
+        <scope>provided</scope>
     </dependency>
     <dependency>
        <groupId>org.opensymphony.quartz</groupId>
@@ -93,11 +94,11 @@
        <version>1.6.6</version>
        <scope>provided</scope>
     </dependency>
-		<dependency>
-            <groupId>org.sakaiproject.scheduler</groupId>
-            <artifactId>scheduler-api</artifactId>
-            <version>2.9-SNAPSHOT</version>
-            <scope>provided</scope>
+	<dependency>
+        <groupId>org.sakaiproject.scheduler</groupId>
+        <artifactId>scheduler-api</artifactId>
+        <version>${sakai.scheduler.version}</version>
+        <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
