--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,12 @@
     </modules>
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sakai.common.version>1.2-SNAPSHOT</sakai.common.version>
+        <sakai.edu-services.version>1.2-SNAPSHOT</sakai.edu-services.version>
+        <sakai.jsf.version>2.9-SNAPSHOT</sakai.jsf.version>
+        <sakai.scheduler.version>2.9-SNAPSHOT</sakai.scheduler.version>
+        <sakai.search.version>1.4-SNAPSHOT</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
@@ -137,37 +142,37 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.9-SNAPSHOT</version>
+                <version>${sakai.jsf.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
-                <version>1.4-SNAPSHOT</version>
+                <version>${sakai.search.version}</version>
                 <scope>provided</scope>
             </dependency>
 			<dependency>
                 <groupId>org.sakaiproject.scheduler</groupId>
                 <artifactId>scheduler-api</artifactId>
-                <version>2.9-SNAPSHOT</version>
+                <version>${sakai.scheduler.version}</version>
                 <scope>provided</scope>
 			</dependency>
         </dependencies>
