[maven-release-plugin] prepare release msgcntr-3.0.0-a01
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@99746 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.0.0-a01</version>
   </parent>
   <name>Sakai Message Forums Component Implementation</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
