--- a/messageforums-hbm/pom.xml
+++ b/messageforums-hbm/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
-    <version>3.0.0-a01</version>
+    <version>3.0-SNAPSHOT</version>
   </parent>
   <name>Sakai Message Forums Hibernate Module</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
