SAK-23907 removing references to sakai.*.version so maven dependency management is used instead
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@129679 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.jsf</groupId>
 			<artifactId>jsf-tool-sun</artifactId>
+			<type>pom</type>
 		</dependency>
 		<dependency>
 		  <groupId>javax.servlet</groupId>
